Stop FormInput errors from overlapping

--- a/components/FormInput/FormInput.css
+++ b/components/FormInput/FormInput.css
@@ -33,8 +33,8 @@
   background: var(--color-error);
   border-radius: 0 0 4px 4px;
   transition: all 200ms ease;
-  padding-right: 0.5em;
   text-align: left;
+  display: block;
   color: white;
   width: 100%;
   opacity: 0;
